@@ -1,8 +1,9 @@
+Origin: https://www.kernel.org/pub/linux/kernel/projects/rt/3.10/patches-3.10.4-rt1.tar.xz
+
 ---
  init/Kconfig |    1 +
  mm/slab.h    |    2 +-
  2 files changed, 2 insertions(+), 1 deletion(-)
-Origin: https://www.kernel.org/pub/linux/kernel/projects/rt/3.10/patches-3.10.4-rt1.tar.xz
 
 Index: linux-stable/init/Kconfig
 ===================================================================
