@@ -79,6 +79,7 @@ linux (3.10.5-1) UNRELEASED; urgency=low
     (Closes: #718505)
   * [rt] genpatch.py: Accept missing series-rt
   * [rt] Update to 3.10.4-rt1 and reenable
+  * [rt] genpatch.py: Fix parsing of upstream patches with no header
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 30 Jul 2013 18:09:20 +0200
 
